...
                        label="METRIC NAME"
                        required
                        testID={`metric-name-${index}`}
                        labelAccessory={labelAccessory}
                        value={metric.name}
                        onChangeText={(val) => change('name', val)}
                        placeholder="e.g., Duration"
                        maxLength={METRIC_NAME_MAX_LENGTH}
                        showCounter
                        error={errors.name}
                    />
                </View>

...
